feat/auth: update entities and sql schema